# cpuminer-gr-avx2

./: .gitignore  Makefile.am  README.md  binding.gyp  build.sh  config.h  config.h.in  config.h.in~  configure  configure.ac  cpu-miner.c  misc.h  virtual_memory.c
algo/echo/aes_ni/: hash.c
algo/gr/: gr-1way.cpp  gr-2way.cpp  gr-3way.cpp  gr-4way.cpp  gr.c  gr.cpp  gr.h
algo/gr/cryptonote/: cryptonight.c  cryptonight.h  cryptonight.h_inline
algo/groestl/aes_ni/: hash-groestl.c  hash-groestl256.c  hash-groestl256.h
algo/keccak/: sha3d.c  sph_keccak.c  sph_keccak.h
algo/luffa/: luffa_for_sse2.c
algo/sha/: sha2.c
crypto/: c_keccak.h
